Fixed alignment of toggle switches

--- a/css/styles.css
+++ b/css/styles.css
@@ -335,20 +335,28 @@ form {
     =================================================   */
 
 .toggle-switch-container {
+    width: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
     align-items: center;
+    justify-content: space-between;
+}
+
+.toggles,
+.toggle-switch-container {
+    width: 300px;
 }
 
 .toggle-div strong {
-    margin: 10px 10px 10px 4px;
+    margin: 10px;
+}
+
+#switch-2-label {
+    margin-right: 42px;
 }
 
 .toggle-div {
     font-size: .9rem;
-    display: flex;
-    justify-content: flex-start;
 }
 
 .button-primary {
@@ -691,7 +699,7 @@ form {
     }
 
     .toggle-div strong {
-        margin: 20px 10px 20px 4px;
+        margin: 20px 10px;
     }
 
     h1 {
